# game-theory

./: .gitignore  README.md  app.py  matrix_game.py  pyproject.toml  requirements.txt
startup_vs_market/: __init__.py  config.py  matrix_game.py
